# TagMaps

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pylintrc  00_generateClusters_OnlyEmoji.cmd  00_generateClusters_OnlyPhotoLocations.cmd  00_generateClusters_OnlyTags.cmd  01_generateTagClusters_fromLBSNCSV_gitbash.sh  02_generateTagClusters_fromLBSNCSV_localSaturationCheck_noPhotoClusters_gitbash.sh  04_generateTagClusters_fromFlickrCSV_gitbash.sh  04_generateTagClusters_fromInstagramCSV_gitbash.sh  04_generateTagClusters_fromInstagramPGlbsnEmojiCSV_gitbash.sh  06_generateTagClusters_fromFlickrCSV_topicModeling_gitbash.sh  11_generateTagClusters_fromLBSNCSV_localSaturationCheck_noPhotoClusters_gitbash.sh  11_generateTagClusters_fromLBSNCSV_onlyPhotoClusters_gitbash.sh  CHANGELOG.md  MANIFEST.in  Pipfile  README.md  SortOutAlways.txt  cx_setup.py  def_functions.py  environment.yml  environment_ci.yml  environment_cx.yml  generateTagClusters.py  log.txt  make_release.sh  mkdocs.yml  notes.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
00_Config/: CorrectPlaceLatLng.txt  SortOutAlways.txt  SortOutAlways_inStr.txt  SortOutPlaces.txt  sourcemapping_fromlbsn.cfg  sourcemapping_lbsn.ini
conda.recipe/: meta.yaml
docs/: about.md  contents.md  developers.md  index.md  quick-guide.md  resources.md
resources/: 00_generateClusters_OnlyEmoji.cmd  00_generateClusters_OnlyPhotoLocations.cmd  00_generateClusters_OnlyTags.cmd  00_generateClusters_test.cmd  02_PhotoDensityMaps.pptx  BasemapLayout_World.mxd  Basemap_World_ArcGisV100.mxd  Basemap_World_ArcGisV101.mxd  Basemap_World_ArcGisV103.mxd  Basemap_World_ArcGisV104.mxd  Basemap_World_ArcGisV105.mxd  Basemap_World_ArcGisV106.mxd  Basemap_World_ArcProV280.aprx  Basemap_World_ArcProV290.aprx  HS_Symbology.lyr  README.md  symbol.emf
tagmaps/: __init__.py  __main__.py  def_functions.py  generateTagClusters.py  matplotlibrc  tagmaps_.py  version.py
tests/: 04_generateTagClusters_fromInstagramPGlbsnEmojiCSV_gitbash.sh  06_generateTagClusters_fromFlickrCSV_topicModeling_gitbash.sh  11_generateTagClusters_fromSensorDataInfWuerzCSV_gitbash.sh  20_generateTagClusters_fromLBSNCSV_ShapefilepathBerchtesgaden_gitbash.sh  21_generateTagClusters_fromLBSNCSV_ShapefilepathBerchtesgaden_TagsOnly_gitbash.sh  test_all.py  test_emoji.py  (+1 more)
(+41 files in other folders)
